/explore/redisdatasource debranded

--- a/docs/explore/redisdatasource/index-redisdatasource.mdx
+++ b/docs/explore/redisdatasource/index-redisdatasource.mdx
@@ -23,10 +23,9 @@ The Redis Data Source for Grafana is a plug-in that allows users to connect to t
 - Redis Cluster and Sentinel supported since version 1.2.
 - Data Source supports:
 
-  - [RedisTimeSeries](https://oss.redis.com/redistimeseries/): TS.GET, TS.INFO, TS.MRANGE, TS.QUERYINDEX, TS.RANGE
-  - [RedisGears](https://oss.redis.com/redisgears/): RG.DUMPREGISTRATIONS, RG.PYEXECUTE, RG.PYSTATS
-  - [RedisSearch](https://oss.redis.com/redisearch/): FT.INFO
-  - [RedisGraph](https://oss.redis.com/redisgraph/): GRAPH.QUERY, GRAPH.SLOWLOG
+  - [Time Series](https://redis.io/docs/stack/timeseries/): TS.GET, TS.INFO, TS.MRANGE, TS.QUERYINDEX, TS.RANGE
+  - [Search and Query](https://redis.io/docs/stack/search/): FT.INFO
+  - [Graph](https://redis.io/docs/stack/graph/): GRAPH.QUERY, GRAPH.SLOWLOG
 
 <Tabs
   defaultValue="Homebrew"
