--- a/docs/howtos/redistimeseries/index-redistimeseries.mdx
+++ b/docs/howtos/redistimeseries/index-redistimeseries.mdx
@@ -1,13 +1,13 @@
 ---
 id: index-redistimeseries
-title: RedisTimeSeries Tutorial
+title: Time Series in Redis Tutorial
 sidebar_label: Overview
 slug: /howtos/redistimeseries/
 ---
 
 import RedisCard from '@theme/RedisCard';
 
-The following links provides you with the available options to get started with RedisTimeSeries
+The following links provides you with the available options to get started with Time Series in Redis
 
 <div class="row">
 
@@ -21,7 +21,7 @@ The following links provides you with the available options to get started with 
 
 <div class="col">
   <RedisCard
-    title="RedisTimeSeries and Go"
+    title="Time Series with Redis in Go lang"
     description="How to collect and process time-series data using Redis and Go"
     page="/howtos/redistimeseries/using-go"
   />
@@ -29,7 +29,7 @@ The following links provides you with the available options to get started with 
 
 <div class="col">
      <RedisCard
-        title="RedisTimeSeries and Python"
+        title="Time Series with Redis in Python lang"
         description="How to collect and process time-series data using Redis and Python"
         page="/howtos/redistimeseries/using-python"
         />
@@ -40,7 +40,7 @@ The following links provides you with the available options to get started with 
 <div class="col">
   <RedisCard
     title="How to monitor Redis with Prometheus and Grafana for Real-Time Analytics"
-    description="Using RedisTimeSeries with Prometheus and Grafana"
+    description="Using Redis Time Series with Prometheus and Grafana"
     page="/howtos/redistimeseries/using-prometheus"
   />
 </div>
