--- a/docs/howtos/redistimeseries/using-python/index-usingpython.mdx
+++ b/docs/howtos/redistimeseries/using-python/index-usingpython.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-usingpython
 title: How to collect and process time-series data using Redis and Python
-sidebar_label: RedisTimeSeries and Python
+sidebar_label: Time Series with Redis and Python
 slug: /howtos/redistimeseries/using-python
 authors: [ajeet]
 ---
@@ -10,13 +10,13 @@ import Authors from '@theme/Authors';
 
 <Authors frontMatter={frontMatter} />
 
-![My Image](images/redistimeseries-python.png)
+![Time Series](images/redistimeseries-python.png)
 
 Time series data is a series of data stored in the time order (Example: Stock performance over time). Industries today are collecting and analyzing time-based data more than ever before. Traditional databases that rely on relational or document data models are designed neither for storing and indexing data based on time, nor for running time-bucketed aggregation queries. Time-series databases fill this void by providing a data model that optimizes data indexing and querying by time.
 
-RedisTimeSeries is a Redis module that allows Redis to be used as a fast in-memory time series database designed to collect, manage, and deliver time series data at scale. The RedisTimeSeries module shares the performance and simplicity aspects of Redis. Under the hood, it uses efficient data structures such as Radix tree to index data by timestamp, which makes it extremely fast and efficient to run time-aggregate queries.
+Time Series is a Redis feature, It allows Redis to be used as a fast in-memory time series database designed to collect, manage, and deliver time series data at scale. The Time Series feature shares the performance and simplicity aspects of Redis. Under the hood, it uses efficient data structures such as Radix tree to index data by timestamp, which makes it extremely fast and efficient to run time-aggregate queries.
 
-## Python Client for RedisTimeSeries
+## Python Client for Time Series with Redis
 
 :::tip
 
@@ -24,7 +24,7 @@ As of redis-py 4.0.0, the redistimeseries-py library is deprecated. It's feature
 
 :::
 
-Follow the steps below to get started with RedisTimeSeries with Python:
+Follow the steps below to get started with Time Series with Redis in Python:
 
 ### Step 1. Create a free Cloud account
 
@@ -53,7 +53,7 @@ click "Create a custom database" option shown in the image.
 
 ### Step 3. Verify the database details
 
-You will be provided with Public endpoint URL and "Redis Stack" as the type of database with the list of modules that comes by default.
+You will be provided with Public endpoint URL and "Redis Stack" as the type of database with the list of features that comes by default.
 
 ![verify database](images/details_database.png)
 
@@ -87,11 +87,11 @@ Save the above file with a name "ts.py".
 
 ## References
 
-- [Getting Started with RedisTimeSeries](/howtos/redistimeseries/getting-started/)
-- Learn more about RedisTimeSeries in the [Quickstart](https://oss.redis.com/redistimeseries/) tutorial.
-- [Build Your Financial Application on RedisTimeSeries](https://redis.com/blog/build-your-financial-application-on-redistimeseries/)
+- [Getting Started with Time Series with Redis](/howtos/redistimeseries/getting-started/)
+- Learn more about Time Series with Redis in the [QuickStart](https://oss.redis.com/redistimeseries/) tutorial.
+- [Build Your Financial Application on Time Series with Redis](https://redis.com/blog/build-your-financial-application-on-redistimeseries/)
 - [How to Manage Real-Time IoT Sensor Data in Redis](https://redis.com/blog/how-to-manage-real-time-iot-sensor-data-in-redis/)
-- [Introduction to RedisTimeSeries - Video](https://www.youtube.com/watch?v=rXynFOrrd-Q)
+- [Introduction to Time Series with Redis - Video](https://www.youtube.com/watch?v=rXynFOrrd-Q)
 
 ##
 
