debranding /explore/redismod

--- a/docs/explore/redismod/index-redismod.mdx
+++ b/docs/explore/redismod/index-redismod.mdx
@@ -6,6 +6,12 @@ slug: /explore/redismod
 authors: [ajeet]
 ---
 
+:::warning DEPRECATED
+
+RedisMod has been deprecated and is no longer supported. Please refer to the [**Getting Started Tutorial**](/howtos/quick-start) for how to use Redis.
+
+:::
+
 import Authors from '@theme/Authors';
 
 <Authors frontMatter={frontMatter} />
