mobile banking session copy edit

--- a/docs/howtos/solutions/mobile-banking/common-mb/additional-resources.mdx
+++ b/docs/howtos/solutions/mobile-banking/common-mb/additional-resources.mdx
@@ -1,4 +1,4 @@
 - [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
-- Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis om Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
-- [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) : To view your Redis data or to play with raw Redis commands in the workbench
+- Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis OM Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
+- [RedisInsight](https://redis.com/redis-enterprise/redis-insight/): To view your Redis data or to play with raw Redis commands in the workbench
 - [Try Redis Enterprise for free](https://redis.com/try-free/)
