--- a/docs/howtos/solutions/mobile-banking/session-management/index-session-management.mdx
+++ b/docs/howtos/solutions/mobile-banking/session-management/index-session-management.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-session-management
-title: Mobile banking authentication and session storage Using Redis
-sidebar_label: Mobile banking authentication and session storage Using Redis
+title: Mobile Banking Authentication and Session Storage Using Redis
+sidebar_label: Mobile Banking Authentication and Session Storage Using Redis
 slug: /howtos/solutions/mobile-banking/session-management
 authors: [prasan, will]
 ---
@@ -13,32 +13,36 @@ import MobileBankingDashboardBalance from './images/demo-dashboard-balance-widge
 
 <MobileBankingSourceCode />
 
-## What is Mobile banking authentication and session storage?
+## What is Authentication and Session Storage for Mobile Banking?
 
-After an user has successfully entered their login credentials, mobile banking apps use an token / sessionId created by server to represent a user's identity. The token / sessionId is stored in Redis Enterprise for the duration of a user session and also sent in the login response to the banking application client (mobile/ browser). The client application then sends the token / sessionId with every request to server and server validates it before processing the request.
+After a user has successfully entered their login credentials, mobile banking apps use a `token` and `sessionId` created by the server to represent a user's identity. The `token` is stored in Redis for the duration of a user session and also sent in the login response to the banking application client (mobile/ browser). The client application then sends the `token` with every request to server and server validates it before processing the request.
 
 ![auth](./images/auth.png)
 
-**Note** : Redis stack supports [JSON](/howtos/redisjson/) data type, indexing and Querying JSON and [more](https://redis.io/docs/stack/). So your Session store is not limited to simple key-value data.
+:::note
 
-The session store houses critical information related to each user as they navigate an application for the duration of their session. Mobile banking session data may include following information
+Redis Stack supports the [**JSON**](/howtos/redisjson/) data type and allows you to index and querying JSON and [**more**](https://redis.io/docs/stack/). So your session store is not limited to simple key-value stringified data.
 
-- User's profile information, such as name, date of birth, email address, etc .
-- User's permissions, such as “user,” “admin,” “supervisor,” “super-admin,” etc .
-- Other app-related data like recent transaction, balance etc .
-- Session expiration, such as one hour from now, one week from now, etc . and more
+:::
 
-## Why you should Redis for Mobile banking session management?
+The session store houses critical information related to each user as they navigate an application for the duration of their session. Mobile banking session data may include, but is not limited to following information:
 
-- **Resilience**: Redis enterprise offers incredible resilience with **99.999% uptime**. After all, authentication token stores must provide round-the-clock availability. This ensures that users get uninterrupted, 24/7 access to their applications.
+- User's profile information, such as name, date of birth, email address, etc.
+- User's permissions, such as `user`, `admin`, `supervisor`, `super-admin`, etc.
+- Other app-related data like recent transaction(s), balance etc.
+- Session expiration, such as one hour from now, one week from now, etc.
+
+## Why you should use Redis for mobile banking session management?
+
+- **Resilience**: Redis Enterprise offers incredible resilience with **99.999% uptime**. After all, authentication token stores must provide round-the-clock availability. This ensures that users get uninterrupted, 24/7 access to their applications.
 
 - **Scalability**: Token stores need to be highly scalable so that they don't become a bottleneck when a **high volume of users** authenticate at once. Redis Enterprise provides **< 1ms latency** at incredibly high throughput (up to **100MM ops/second**) which makes authentication and session data access much faster!
 
-- **Integration with common libraries and platforms**: Since Redis open source is integrated into most session management libraries and platforms, Redis Enterprise can seamlessly integrate when upgrading from open source Redis (For eg: express-session and connect-redis-stack libraries integration is demonstrated in this tutorial)
+- **Integration with common libraries and platforms**: Since Redis open source is integrated into most session management libraries and platforms, Redis Enterprise can seamlessly integrate when upgrading from open source Redis (e.g. `express-session` and [`connect-redis-stack`](https://www.npmjs.com/package/connect-redis-stack) libraries integration is demonstrated in this tutorial)
 
 :::tip
 
-Check our <u>[JSON Web Tokens (JWT) are Dangerous for User Sessions](https://redis.com/blog/json-web-tokens-jwt-are-dangerous-for-user-sessions/)</u> ebook for a secured session management practice.
+Read our ebook that answers the question: [**Are JSON Web Tokens (JWT) Safe?**](https://redis.com/docs/json-web-tokens-jwts-are-not-safe/) It discusses when and how to safely use JWTs, with battle-tested solutions for session management.
 
 :::
 
@@ -98,14 +102,14 @@ export const createBankTransaction = async () => {
 };
 ```
 
-Sample bankTransaction data view (in RedisInsight)
+Sample `bankTransaction` data view using [RedisInsight](https://redis.com/redis-enterprise/redis-insight/)
 
 ![bank transaction data](./images/bank-transaction-data.png)
 
 ![bank transaction json](./images/bank-transaction-json.png)
 
 :::tip
-Download <u>[RedisInsight](https://redis.com/redis-enterprise/redis-insight/)</u> to view your Redis data or to play with raw Redis commands in the workbench. learn more about <u>[RedisInsight in tutorials](/explore/redisinsight/)</u>
+Download [**RedisInsight**](https://redis.com/redis-enterprise/redis-insight/) to view your Redis data or to play with raw Redis commands in the workbench. Learn more by reading the [**RedisInsight tutorial**](/explore/redisinsight/)
 :::
 
 ### Session configuration
@@ -113,7 +117,7 @@ Download <u>[RedisInsight](https://redis.com/redis-enterprise/redis-insight/)</u
 Redis is integrated into many session management libraries, We will be using [connect-redis-stack](https://www.npmjs.com/package/connect-redis-stack) library for this demo which provides Redis session storage for your
 [express-session](https://www.npmjs.com/package/express-session) application.
 
-Following code illustrates configuring Redis session and it's integration with express app.
+The following code illustrates configuring Redis sessions and with `express-session`.
 
 ```js title="app/server.js"
 import session from 'express-session';
@@ -147,9 +151,9 @@ app.listen(8080, () => console.log('Listening on port 8080'));
 
 ![login page](./images/demo-login.png)
 
-Let's look in to the `/perform_login` API code which is triggered on the click of Login button from [login page](http://localhost:8080/)
+Let's look at the `/perform_login` API code which is triggered on the click of Login button from [login page](http://localhost:8080/)
 
-Since [connect-redis-stack](https://www.npmjs.com/package/connect-redis-stack) session is configured in the express middleware, a session is automatically created at the at the end of the HTTP(API) response if `req.session` variable is assigned/ altered.
+Since [connect-redis-stack](https://www.npmjs.com/package/connect-redis-stack) is an express middleware, a session is automatically created at the start of the request, and updated at the end of the HTTP(API) response if `req.session` variable is altered.
 
 ```js
 app.post('/perform_login', (req, res) => {
@@ -172,7 +176,7 @@ app.post('/perform_login', (req, res) => {
 });
 ```
 
-In above code - `session.userid` variable is assigned with a value on successful login (for bob user), so a session is created in Redis with assigned data and only Redis key (sessionId) is stored in client cookie.
+In above code - `session.userid` variable is assigned with a value on successful login (for "bob" user), so a session is created in Redis with assigned data and only Redis key (sessionId) is stored in client cookie.
 
 - Dashboard page after successful login
   ![dashboard](./images/demo-dashboard.png)
@@ -187,9 +191,9 @@ Now on every other API request from client, [connect-redis-stack](https://www.np
 
 ### Balance API (Session storage)
 
-Consider below `/transaction/balance` API code to demonstrate session storage.
+Consider the below `/transaction/balance` API code to demonstrate session storage.
 
-We have to modify the `req.session` variable to add/ update session data.
+We have to modify the `req.session` variable to update session data.
 Let's add more session data like current balance amount of the user .
 
 ```js title="app/routers/transaction-router.js"
@@ -229,13 +233,12 @@ transactionRouter.get('/balance', async (req, res) => {
     className="margin-bottom--md"
   />
 
-## Ready to use Redis in session management ?
+## Ready to use Redis in session management?
 
-Hopefully, this tutorial has helped you visualize how to use Redis for better session management. For additional resources related to this topic, check out the links below:
+Hopefully, this tutorial has helped you visualize how to use Redis for better session management, specifically in the context of mobile banking. For additional resources related to this topic, check out the links below:
 
 ### Additional resources
 
-- [JSON Web Tokens (JWT) are Dangerous for User Sessions](https://redis.com/blog/json-web-tokens-jwt-are-dangerous-for-user-sessions/)
+- [Are JSON Web Tokens (JWT) Safe?](https://redis.com/docs/json-web-tokens-jwts-are-not-safe/)
 
-- General
-  <GeneralAdditionalResources />
+<GeneralAdditionalResources />
